# mujoco-franka-demo

./: .gitignore  CMakeLists.txt  README.md  README_cn.md  forward_kinematics.c  forward_kinematics.cpp  forward_kinematics.py  inverse_kinematics.cpp  inverse_kinematics.py  poe.cpp
model/franka_emika_panda/: factory.INFO
